Bug 351089 - wallpaper is not displayed if the file names have symbol "#"
Summary: wallpaper is not displayed if the file names have symbol "#"
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: 5.3.2
Platform: Kubuntu Linux
: NOR minor
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-08 16:44 UTC by rооt
Modified: 2016-01-16 16:11 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rооt 2015-08-08 16:44:16 UTC
wallpaper is not displayed if the file names have symbol "#"...

Reproducible: Always

Steps to Reproduce:
1.rename the wallpaper by adding the symbol "#" (wallpaper 1.jpg --> wallpaper #1.jpg)
2.go to desktop settings and select renamed file (wallpaper #1.jpg)
3.wallpaper is not displayed

Actual Results:  
wallpaper is not displayed only black screen

Expected Results:  
wallpaper image should be displayed
Comment 1 Aaron Honeycutt 2015-08-08 16:49:56 UTC
Linux KubuntuPad-Y510P 4.1.0-3-generic #3-Ubuntu SMP Tue Jul 28 12:25:10 UTC 2015 x86_64 x86_64 x86_64 GNU/Linux

DISTRIB_ID=Ubuntu
DISTRIB_RELEASE=15.10
DISTRIB_CODENAME=wily
DISTRIB_DESCRIPTION="Ubuntu Wily Werewolf (development branch)"

I can confirm this happens on WIly with Plasma 5.3.2 and it happens with jpg as well as png files.
Comment 2 Thomas Braxton 2015-08-08 17:26:37 UTC
This should probably be moved to Product: plasmashell Component: Image Wallpaper
Comment 3 David Edmundson 2016-01-16 16:11:11 UTC
Git commit d78bd07d2919243e2fbd442e97c4f0e4b44ce1c2 by David Edmundson.
Committed on 16/01/2016 at 16:11.
Pushed by davidedmundson into branch 'master'.

Export wallpaper path as a URL

Summary:
Image source property takes a URL. Setting a path as a URL directly
doesn't encode everything properly unless done explicitly.

This fixes paths which contain # symbols from loading.

Reviewers: #plasma, bshah

Reviewed By: #plasma, bshah

Differential Revision: https://phabricator.kde.org/D818

M  +2    -2    wallpapers/image/image.cpp
M  +2    -2    wallpapers/image/image.h

http://commits.kde.org/plasma-workspace/d78bd07d2919243e2fbd442e97c4f0e4b44ce1c2