Export wallpaper path as a URL

Summary:
Image source property takes a URL. Setting a path as a URL directly
doesn't encode everything properly unless done explicitly.

This fixes paths which contain # symbols from loading.

BUG: 351089

Reviewers: #plasma, bshah

Reviewed By: #plasma, bshah

Differential Revision: https://phabricator.kde.org/D818